--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                      </a>
                   </div>   
                </form>
-               <form action="" class="sign-un-form">
-                  <h2 class="title">Sign un</h2>
+               <form action="" class="sign-up-form">
+                  <h2 class="title">Sign up</h2>
                   <div class="input-field">
                      <i class="fas fa-user"></i>
                      <input type="text" placeholder="Username">
@@ -79,8 +79,25 @@
             </div>
          </div>
          <div class="panels-container">
-
+            <div class="panel left-panel">
+               <div class="content">
+                  <h3>New here?</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error fugit, unde placeat aliquam totam expedita officiis distinctio necessitatibus? Voluptate dolorum laborum et id provident amet at, consequuntur quo voluptatem cum.</p>
+                  <button class="btn transparent" id="sign-up-btn">Sign up</button>
+               </div>
+               <img src="images/sign_up.svg" class="image" alt=""/>
+            </div>
+            <div class="panel right-panel">
+               <div class="content">
+                  <h3>One of us?</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error fugit, unde placeat aliquam totam expedita officiis distinctio necessitatibus? Voluptate dolorum laborum et id provident amet at, consequuntur quo voluptatem cum.</p>
+                  <button class="btn transparent" id="sign-in-btn">Sign in</button>
+               </div>
+               <img src="images/sign_in.svg" class="image" alt=""/>
+            </div>
          </div>
       </div>
+
+      <script src="app.js"></script>
    </body>
 </html>
